fixed overflow

--- a/main/style.css
+++ b/main/style.css
@@ -90,8 +90,6 @@ p {
   justify-content: center;
 }
 
-
-
 div {
   width: 100px;
   height: 100px;
@@ -166,7 +164,6 @@ div {
   text-shadow: 2px 2px 5px rgb(0, 0, 0);
   font-weight: 900;
   margin-bottom: 7%;
-  margin-left: 2%;
 }
 
 .michelin {
@@ -194,7 +191,6 @@ div {
   background-color: #212529;
   color: white;
   text-align: center;
-
 }
 
 .bg {
@@ -204,8 +200,6 @@ div {
   top: 0%;
   position: fixed;
 }
-
-
 
 /*
  ⠀⠀⠀⠀⢀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀⠀⠀⠀⠀
